--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ trigger:
 - main
 
 schedules:
-- cron: "55 18 * * 6-7"
+- cron: "* * * * 6-7"
   displayName: Saturday Build
   branches:
       include:
