Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,12 +78,12 @@ jobs:
       LoginMethod: ${{ parameters.LoginMethod }}
 
 trigger:
-- main
+- master
 
 schedules:
 - cron: "* * * * 6-7"
   displayName: Saturday Build
   branches:
       include:
-      - main
+      - master
   always: true
