Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ trigger:
 - master
 
 schedules:
-- cron: "4 19 * * 6-7"
+- cron: "6 19 * * 6"
   displayName: Saturday Build
   branches:
       include:
