Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ trigger:
 - master
 
 schedules:
-- cron: "31 19 * * 6"
+- cron: "* * * * *"
   displayName: Saturday Build
   branches:
       include:
